refactor code (closes #1072)
refactor some code about unnecessary objects